@@ -4,8 +4,11 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-DESCLOGINFORM="This Module displays a Username and Password Login form. It cannot be disabled."
-MOD_LOGIN="mod_login"
-LANGUAGE="Language"
-ENCRYPT LOGIN FORM="Encrypt Login Form"
-SUBMIT_ENCRYPTED_LOGIN_DATA_DESC="Submit encrypted login data (requires SSL).  Do not enable this option if Joomla is not accessible using the https:// protocol prefix."
+MOD_LOGIN_XML_DESCRIPTION="This Module displays a Username and Password Login form. It cannot be unpublished."
+LOGIN FORM="Login form"
+MOD_LOGIN_FIELD_USESECURE_LABEL="Encrypt Login Form"
+MOD_LOGIN_FIELD_USESECURE_DESC="Submit encrypted login data (requires SSL).  Do not enable this option if Joomla is not accessible using the https:// protocol prefix."
+MOD_LOGIN_LOGIN="Log in"
+MOD_LOGIN_LANGUAGE="Language"
+MOD_LOGIN_PASSWORD="Password"
+MOD_LOGIN_USERNAME="User name"
